2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (ss_mutex_lock): Wait for any local thread.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* rm.h (rm_method_id_string): Handle the case where ID is
	RM_activity_stats.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_flush): Take additional parameter,
	clear_kernel.  If true, fetch the status bits corresponding to
	Viengoos even if the dirty bit is set.  Update callers.

	* pager.c (is_clean): More thoroughly check that a page alleged to
	be clean is really all zeros.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* rm.h (rm_method_id_string): Handle the case where ID is
	RM_object_status.
	* server.c (server_loop): Implement the object_status method.

	* ager.c (ager_loop): Set DESC->USER_DIRTY and DESC->REFERENCED as
	appropriate.
	* object.c (folio_object_alloc): Clear ODESC->USER_REFERENCED and
	ODESC->USER_DIRTY.
	(folio_object_alloc): Clear the object's user referenced and user
	dirty bits.
	* object.h (struct object_desc): Add fields user_dirty and
	user_referenced.
	(object_desc_unmap): Update DESC->USER_DIRTY and
	DESC->USER_REFERENCED appropriately.
	(object_desc_flush): LIkewise.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_flush): Take additional parameter
	CLEAR_KERNEL.  If true, also clear the kernel's status bits.

	* object.c (memory_object_alloc): Clear OBJECT's status bits
	before returning it.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_find_soft): If we don't claim ODESC, mark it as
	shared.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): If the caller's activity slot does not
	designate a valid activity object, just ignore the message.
	
2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (ager_start): Set the new thread's pager to the
	initial thread.
	* server.c (server_loop): If we get a message from a kernel (i.e.,
	Viengoos) thread, panic.
