@@ -1,5 +1,10 @@
 2008-05-24  Neal H. Walfield  <neal@gnu.org>
 
+	* object.c (object_desc_claim): Fix debug statement, ACTIVITY may
+	be NULL.
+
+2008-05-24  Neal H. Walfield  <neal@gnu.org>
+
 	* mutex.h (ss_mutex_lock): Wait for any local thread.
 
 2008-05-23  Neal H. Walfield  <neal@gnu.org>
